fix(style): color contrast in accent button

--- a/src/.vuepress/theme/styles/_themes.scss
+++ b/src/.vuepress/theme/styles/_themes.scss
@@ -8,7 +8,7 @@
   --bg-hover-sidebar: theme('colors.light.400');
   --color: theme('colors.gray.800');
   --accent: theme('colors.accent');
-  --accent-text-button: theme('colors.dark.700');
+  --accent-text-button: #171717;
   --bg-code-block: theme('colors.dark.700');
   --bg-header-code: theme('colors.dark.900');
   --bg-left: linear-gradient(90deg, var(--bg-secondary) calc(100% - 13px), transparent 13px);
